Document r/o and r/w PRserv and HASHserv in the templates
This adds sections for the PRserv and HASHserv in the local.conf templates (for r/o upstream).
Also we add comments to the r/w part that is reserved for CI.

Change-Id: Id39b11bc9664b441f5dcae3646259401b5d9a6aa
Signed-off-by: Jan-Simon Moeller <jsmoeller@linuxfoundation.org>
Reviewed-on: https://gerrit.automotivelinux.org/gerrit/c/AGL/meta-agl/+/29945
Tested-by: Jenkins Job builder account
ci-image-boot-test: Jenkins Job builder account
ci-image-build: Jenkins Job builder account

--- a/meta-agl-core/conf/templates/base/local.conf.sample
+++ b/meta-agl-core/conf/templates/base/local.conf.sample
@@ -279,9 +279,15 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 #
 # A shared hash equivalent server can be set with "<HOSTNAME>:<PORT>" format
 #
+# local only
 #BB_HASHSERVE = "auto"
 #BB_SIGNATURE_HANDLER = "OEEquivHash"
-
+#
+# online/upstream r/o
+#AGL_HOST_HASHSERV = "prserv.automotivelinux.org"
+#BB_SIGNATURE_HANDLER = "OEEquivHash"
+#BB_HASHSERVE = "auto"
+#BB_HASHSERVE_UPSTREAM = "${AGL_HOST_HASHSERV}:8888"
 
 # The network based PR service host and port
 # Uncomment the following lines to enable PRservice.
@@ -289,6 +295,10 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 # start local PRService.
 # Set to other values to use remote PRService.
 #PRSERV_HOST = "localhost:0"
+#
+# r/o upstream prserv
+#AGL_HOST_PRSERV = "prserv.automotivelinux.org"
+#PRSERV_HOST = "prserv.automotivelinux.org:8686"
 
 
 # Archive the source and put them to ${DEPLOY_DIR}/sources/.
