Add support NanoPC-T6(RK3588) board
This patch add NanoPC-T6 board support to AGL that board is
manufactured by FriendlyElec.

Board info.
https://wiki.friendlyelec.com/wiki/index.php/NanoPC-T6

Bug-AGL: SPEC-5208

Change-Id: Id1b6d9c6f73ece2b3a2f602405f534473e8bcbf2
Signed-off-by: Naoto Yamaguchi <naoto.yamaguchi@aisin.co.jp>
Reviewed-on: https://gerrit.automotivelinux.org/gerrit/c/AGL/meta-agl/+/30168
Reviewed-by: Jan-Simon Moeller <jsmoeller@linuxfoundation.org>
ci-image-build: Jenkins Job builder account
ci-image-boot-test: Jenkins Job builder account
Tested-by: Jenkins Job builder account

--- a/meta-pipewire/recipes-multimedia/wireplumber/wireplumber-config-agl/30-AGL-alsa.conf
+++ b/meta-pipewire/recipes-multimedia/wireplumber/wireplumber-config-agl/30-AGL-alsa.conf
@@ -63,6 +63,11 @@ monitor.alsa.rules = [
         node.name = "~alsa_output.*"
         api.alsa.pcm.name = "bcm2835 ALSA"
       }
+      # nanopc-t6
+      {
+        node.name = "~alsa_output.*"
+        api.alsa.card.id = "realtekrt5616co"
+      }
     ]
     actions = {
       update-props = {
@@ -89,6 +94,11 @@ monitor.alsa.rules = [
       {
         node.name = "~alsa_input.*"
         api.alsa.card.id = "rcarsound"
+      }
+      # nanopc-t6
+      {
+        node.name = "~alsa_input.*"
+        api.alsa.card.id = "realtekrt5616co"
       }
     ]
     actions = {
