Mark the start of development for Super Salmon
This is the start of development for Super Salmon.

Bug-AGL: SPEC-5209
Change-Id: Id37b204eb8dea18eb1d5a687dd1febc5b27f78ec
Signed-off-by: Jan-Simon Moeller <jsmoeller@linuxfoundation.org>
Reviewed-on: https://gerrit.automotivelinux.org/gerrit/c/AGL/meta-agl/+/30110
ci-image-boot-test: Jenkins Job builder account
Tested-by: Jenkins Job builder account
ci-image-build: Jenkins Job builder account

--- a/meta-agl-core/conf/distro/poky-agl.conf
+++ b/meta-agl-core/conf/distro/poky-agl.conf
@@ -9,9 +9,9 @@ DISTRO_NAME = "Automotive Grade Linux"
 
 
 # Release flags
-DISTRO_CODENAME = "ricefish"
+DISTRO_CODENAME = "salmon"
 AGL_BRANCH = "master"
-AGLVERSION = "17.92.0"
+AGLVERSION = "18.90.0"
 
 # switch  devel/release
 #AGLRELEASETYPE ?= "agldevelopment"
@@ -29,8 +29,8 @@ DISTRO_BRANCH_VERSION_TAG = "${DISTRO_CODENAME}/${@'${DISTRO_VERSION}'.replace('
 # reproducible builds:
 # Set the desired timestamps
 # E.g. update for (major) releases
-export SOURCE_DATE_EPOCH = "1718892136"
-REPRODUCIBLE_TIMESTAMP_ROOTFS = "1718892136"
+export SOURCE_DATE_EPOCH = "1721815278"
+REPRODUCIBLE_TIMESTAMP_ROOTFS = "1721815278"
 
 
 # SDK
