Enable systemd-timesyncd in case of using systemd-networkd
At SPEC-737, systemd-timesyncd was disabled every case.  It causes
NTP capability lost in case of using systemd-networkd.

This patch enable conditionally enable/disable for systemd-timesyncd.

Bug-AGL: SPEC-5274

Change-Id: I2fb4841c341f1b0a90a4868627102704aafd0f6a
Signed-off-by: Naoto Yamaguchi <naoto.yamaguchi@aisin.co.jp>
Reviewed-on: https://gerrit.automotivelinux.org/gerrit/c/AGL/meta-agl/+/30505
Reviewed-by: Jan-Simon Moeller <jsmoeller@linuxfoundation.org>
Tested-by: Jenkins Job builder account
ci-image-build: Jenkins Job builder account
ci-image-boot-test: Jenkins Job builder account

--- a/meta-agl-core/conf/distro/poky-agl.conf
+++ b/meta-agl-core/conf/distro/poky-agl.conf
@@ -61,7 +61,7 @@ VIRTUAL-RUNTIME_initscripts = ""
 VIRTUAL-RUNTIME_base-utils-syslog = ""
 
 # network manager to use (possible values: systemd, connman)
-VIRTUAL-RUNTIME_net_manager = "connman"
+VIRTUAL-RUNTIME_net_manager ?= "connman"
 
 
 QEMU_TARGETS ?= "arm aarch64 i386 x86_64 riscv64"
