Update to meta-qt6: remove references to qt5
Update files to match the update to qt6.

Bug-AGL: SPEC-5294
Change-Id: I9db4ca648cc781378c01fe1381bb90ad1c78481c
Signed-off-by: Jan-Simon Moeller <jsmoeller@linuxfoundation.org>
Reviewed-on: https://gerrit.automotivelinux.org/gerrit/c/AGL/meta-agl/+/30531

--- a/meta-agl-core/conf/layer.conf
+++ b/meta-agl-core/conf/layer.conf
@@ -16,9 +16,11 @@ BBFILES_DYNAMIC += " \
     selinux:${LAYERDIR}/dynamic-layers/meta-selinux/*/*/*.bb \
     selinux:${LAYERDIR}/dynamic-layers/meta-selinux/*/*/*.bbappend \
     \
-    qt5-layer:${LAYERDIR}/dynamic-layers/meta-qt5/*/*/*.bb \
-    qt5-layer:${LAYERDIR}/dynamic-layers/meta-qt5/*/*/*.bbappend \
 "
+# migrate to meta-qt6
+#    qt5-layer:${LAYERDIR}/dynamic-layers/meta-qt5/*/*/*.bb \
+#    qt5-layer:${LAYERDIR}/dynamic-layers/meta-qt5/*/*/*.bbappend \
+#
 
 LAYERSERIES_COMPAT_aglcore = "scarthgap"
 LAYERDEPENDS_aglcore = "core"
