meta-qt6 uprev: bring back dynamic layer and re-enable wayland-egl as default
This brings back the dynamic layer for qt6 and sets our default to
wayland-egl. The QtLocation bbappend has been dropped, as the MapBox
backend is no longer supported.

This fixes the apps being displayed.

Bug-AGL: SPEC-5294
Change-Id: I214f63ebaf2186cdd5281361cbe31c0c8c8bcda5
Signed-off-by: Jan-Simon Moeller <jsmoeller@linuxfoundation.org>
Reviewed-on: https://gerrit.automotivelinux.org/gerrit/c/AGL/meta-agl/+/30540
ci-image-build: Jenkins Job builder account
Tested-by: Jenkins Job builder account
ci-image-boot-test: Jenkins Job builder account

--- a/meta-agl-core/conf/layer.conf
+++ b/meta-agl-core/conf/layer.conf
@@ -16,11 +16,9 @@ BBFILES_DYNAMIC += " \
     selinux:${LAYERDIR}/dynamic-layers/meta-selinux/*/*/*.bb \
     selinux:${LAYERDIR}/dynamic-layers/meta-selinux/*/*/*.bbappend \
     \
+    qt6-layer:${LAYERDIR}/dynamic-layers/meta-qt6/*/*/*.bb \
+    qt6-layer:${LAYERDIR}/dynamic-layers/meta-qt6/*/*/*.bbappend \
 "
-# migrate to meta-qt6
-#    qt5-layer:${LAYERDIR}/dynamic-layers/meta-qt5/*/*/*.bb \
-#    qt5-layer:${LAYERDIR}/dynamic-layers/meta-qt5/*/*/*.bbappend \
-#
 
 LAYERSERIES_COMPAT_aglcore = "scarthgap"
 LAYERDEPENDS_aglcore = "core"
