Change master to Terrific Trout
Update the distro codename and version.

Bug-AGL: SPEC-5334
Change-Id: I83ada0729c0663052fd88538939560e6204cd5d4
Signed-off-by: Jan-Simon Moeller <jsmoeller@linuxfoundation.org>
Reviewed-on: https://gerrit.automotivelinux.org/gerrit/c/AGL/meta-agl/+/30760
ci-image-build: Jenkins Job builder account
ci-image-boot-test: Jenkins Job builder account
Tested-by: Jenkins Job builder account

--- a/meta-agl-core/conf/distro/poky-agl.conf
+++ b/meta-agl-core/conf/distro/poky-agl.conf
@@ -9,9 +9,9 @@ DISTRO_NAME = "Automotive Grade Linux"
 
 
 # Release flags
-DISTRO_CODENAME = "salmon"
+DISTRO_CODENAME = "trout"
 AGL_BRANCH = "master"
-AGLVERSION = "18.92.0"
+AGLVERSION = "19.90.0"
 
 # switch  devel/release
 #AGLRELEASETYPE ?= "agldevelopment"
